cabal-version:      3.0
name:               toml-parser
version:            1.0.1.0
synopsis:           TOML 1.0.0 parser
description:
    TOML parser using generated lexers and parsers with
    careful attention to the TOML 1.0.0 semantics for
    defining tables.
license:            ISC
license-file:       LICENSE
author:             Eric Mertens
maintainer:         emertens@gmail.com
copyright:          2023 Eric Mertens
category:           Text
build-type:         Simple
tested-with:        GHC == 9.2.8, GHC == 9.4.5, GHC == 9.6.2

extra-doc-files:
    ChangeLog.md
    README.md

source-repository head
    type: git
    location: https://github.com/glguy/toml-parser
    tag: main

common extensions
    default-language:   Haskell2010
    default-extensions:
        BlockArguments
        DeriveTraversable
        GeneralizedNewtypeDeriving
        ImportQualifiedPost
        LambdaCase
        ScopedTypeVariables
        ViewPatterns

library
    import:             extensions
    hs-source-dirs:     src
    default-language:   Haskell2010
    exposed-modules:
        Toml
        Toml.FromValue
        Toml.FromValue.Matcher
        Toml.Lexer
        Toml.Lexer.Token
        Toml.Lexer.Utils
        Toml.Located
        Toml.Parser
        Toml.Parser.Types
        Toml.Position
        Toml.Pretty
        Toml.Semantics
        Toml.ToValue
        Toml.Value
    build-depends:
        array           ^>= 0.5,
        base            ^>= 4.16 || ^>= 4.17 || ^>= 4.18,
        containers      ^>= 0.5 || ^>= 0.6,
        prettyprinter   ^>= 1.7,
        time            ^>= 1.11 || ^>= 1.12,
        transformers    ^>= 0.5 || ^>= 0.6,
    build-tool-depends:
        alex:alex       >= 3.2,
        happy:happy     >= 1.19,

test-suite unittests
    import:             extensions
    type:               exitcode-stdio-1.0
    hs-source-dirs:     test
    main-is:            Main.hs
    build-depends:
        base,
        containers,
        hspec           >= 2.10 && < 2.12,
        template-haskell ^>= 2.18 || ^>= 2.19 || ^>= 2.20,
        time,
        toml-parser,
    other-modules:
        QuoteStr
