cabal-version:      3.0
name:               toml-parser
version:            1.3.0.0
synopsis:           TOML 1.0.0 parser
description:
    TOML parser using generated lexers and parsers with
    careful attention to the TOML 1.0.0 semantics for
    defining tables.
license:            ISC
license-file:       LICENSE
author:             Eric Mertens
maintainer:         emertens@gmail.com
copyright:          2023 Eric Mertens
category:           Text
build-type:         Simple
tested-with:        GHC == {8.10.7, 9.0.2, 9.2.8, 9.4.5, 9.6.2}

extra-doc-files:
    ChangeLog.md
    README.md

source-repository head
    type: git
    location: https://github.com/glguy/toml-parser
    tag: main

common extensions
    default-language:   Haskell2010
    default-extensions:
        BlockArguments
        DeriveDataTypeable
        DeriveGeneric
        DeriveTraversable
        EmptyCase
        FlexibleContexts
        FlexibleInstances
        GeneralizedNewtypeDeriving
        ImportQualifiedPost
        LambdaCase
        ScopedTypeVariables
        TypeOperators
        TypeSynonymInstances
        ViewPatterns

library
    import:             extensions
    hs-source-dirs:     src
    default-language:   Haskell2010
    exposed-modules:
        Toml
        Toml.FromValue
        Toml.FromValue.Generic
        Toml.FromValue.Matcher
        Toml.FromValue.ParseTable
        Toml.Lexer
        Toml.Lexer.Token
        Toml.Located
        Toml.Parser
        Toml.Parser.Types
        Toml.Position
        Toml.Pretty
        Toml.Semantics
        Toml.ToValue
        Toml.ToValue.Generic
        Toml.Value
    other-modules:
        Toml.Lexer.Utils
        Toml.Parser.Utils
    build-depends:
        array           ^>= 0.5,
        base            ^>= {4.14, 4.15, 4.16, 4.17, 4.18},
        containers      ^>= {0.5, 0.6},
        prettyprinter   ^>= 1.7,
        text            >= 0.2 && < 3,
        time            ^>= {1.9, 1.10, 1.11, 1.12},
        transformers    ^>= {0.5, 0.6},
    build-tool-depends:
        alex:alex       >= 3.2,
        happy:happy     >= 1.19,

test-suite unittests
    import:             extensions
    type:               exitcode-stdio-1.0
    hs-source-dirs:     test
    main-is:            Main.hs
    default-extensions:
        QuasiQuotes
    build-tool-depends:
        hspec-discover:hspec-discover ^>= {2.10, 2.11}
    build-depends:
        base,
        containers,
        hspec           ^>= {2.10, 2.11},
        template-haskell ^>= {2.16, 2.17, 2.18, 2.19, 2.20},
        time,
        toml-parser,
    other-modules:
        DecodeSpec
        FromValueSpec
        HieDemoSpec
        LexerSpec
        PrettySpec
        QuoteStr
        TomlSpec
        ToValueSpec

test-suite readme
    import:             extensions
    type:               exitcode-stdio-1.0
    main-is:            README.lhs
    ghc-options:        -pgmL markdown-unlit
    build-depends:
        base,
        toml-parser,
    build-tool-depends:
        markdown-unlit:markdown-unlit ^>= {0.5.1, 0.6.0},
