cabal-version:      3.4
name:               toml
version:            0.1.0.0
-- synopsis:
-- description:
license:            ISC
license-file:       LICENSE
author:             Eric Mertens
maintainer:         emertens@gmail.com
-- copyright:
category:           Text
build-type:         Simple
-- extra-source-files:

common warnings
    ghc-options: -Wall

common extensions
    default-extensions:
        BlockArguments,
        DeriveTraversable,
        ImportQualifiedPost,
        LambdaCase,

library
    import:           warnings, extensions
    exposed-modules:
        Toml,
    other-modules:
        Lexer,
        LexerUtils,
        Located,
        Parser,
        Position,
        Pretty,
        Raw,
        Semantics,
        Token,
        Value,
    build-depends:
        array,
        base >=4.17.1.0,
        containers,
        time,
        transformers,
    hs-source-dirs:   src
    default-language: Haskell2010

test-suite unittests
    import:             warnings, extensions
    type:               exitcode-stdio-1.0
    hs-source-dirs:     test
    default-language:   Haskell2010
    main-is:            Main.hs
    build-depends:
        base,
        containers,
        hspec,
        template-haskell,
        time,
        toml,
    other-modules:
        Str