cabal-version:      3.4
name:               toml
version:            0.1.0.0
synopsis:           TOML 1.0.0 parser
description:
    TOML parser using generated lexers and parsers with
    careful attention to the TOML 1.0.0 semantics for
    defining tables.
license:            ISC
license-file:       LICENSE
author:             Eric Mertens
maintainer:         emertens@gmail.com
copyright:          2023 Eric Mertens
category:           Text
build-type:         Simple

common extensions
    default-extensions:
        BlockArguments
        DeriveTraversable
        GeneralizedNewtypeDeriving
        ImportQualifiedPost
        LambdaCase
        ScopedTypeVariables
        ViewPatterns

library
    import:             extensions
    hs-source-dirs:     src
    default-language:   Haskell2010
    exposed-modules:
        Toml
        Toml.FromValue
        Toml.Lexer
        Toml.LexerUtils
        Toml.Located
        Toml.Parser
        Toml.Position
        Toml.Pretty
        Toml.Result
        Toml.Raw
        Toml.Semantics
        Toml.Token
        Toml.ToValue
        Toml.Value
    build-depends:
        array           ^>= 0.5,
        base            >= 4.17.1.0,
        containers      ^>= 0.6,
        prettyprinter   ^>= 1.7,
        time            ^>= 1.12,
        transformers    ^>= 0.5 || ^>= 0.6,

test-suite unittests
    import:             extensions
    type:               exitcode-stdio-1.0
    hs-source-dirs:     test
    default-language:   Haskell2010
    main-is:            Main.hs
    build-depends:
        base,
        containers,
        hspec           ^>= 2.11,
        template-haskell,
        time,
        toml,
    other-modules:
        QuoteStr

flag build-test-codecs
    default: False
    description: Enable building the JSON test codec drivers

common test-driver
    if !flag(build-test-codecs)
        buildable: False

executable TomlDecoder
    import:             extensions, test-driver
    hs-source-dirs:     decoder
    main-is:            Main.hs
    build-depends:
        aeson,
        base,
        bytestring,
        time,
        toml,

executable TomlEncoder
    import:             extensions, test-driver
    hs-source-dirs:     encoder
    main-is:            Main.hs
    build-depends:
        aeson,
        toml,
        base,
        bytestring,
        time,

executable TomlHighlighter
    import:             extensions, test-driver
    hs-source-dirs:     highlighter
    main-is:            Main.hs
    build-depends:
        toml,
        base,
        prettyprinter,
        prettyprinter-ansi-terminal,
