cabal-version:      3.0
name:               toml-test-drivers
version:            1.0.0.0
synopsis:           toml-parser test drivers
description:
    Test executables for the toml-parser library.
license:            ISC
license-file:       LICENSE
author:             Eric Mertens
maintainer:         emertens@gmail.com
copyright:          2023 Eric Mertens
category:           Text
build-type:         Simple
tested-with:        GHC == 9.2.8, GHC == 9.4.5, GHC == 9.6.2

source-repository head
    type: git
    location: https://github.com/glguy/toml-parser
    tag: main

common extensions
    default-language:   Haskell2010
    default-extensions:
        BlockArguments
        DeriveTraversable
        GeneralizedNewtypeDeriving
        ImportQualifiedPost
        LambdaCase
        ScopedTypeVariables
        ViewPatterns

executable TomlDecoder
    import:             extensions
    hs-source-dirs:     decoder
    main-is:            Main.hs
    build-depends:
        aeson,
        base,
        bytestring,
        time,
        toml-parser,

executable TomlEncoder
    import:             extensions
    hs-source-dirs:     encoder
    main-is:            Main.hs
    build-depends:
        aeson,
        toml-parser,
        base,
        bytestring,
        time,

executable TomlHighlighter
    import:             extensions
    hs-source-dirs:     highlighter
    main-is:            Main.hs
    build-depends:
        toml-parser,
        base,
        prettyprinter,
        prettyprinter-ansi-terminal,
