cabal-version:      3.0
name:               toml-test-drivers
version:            1.0.0.0
synopsis:           toml-parser test drivers
description:
    Test executables for the toml-parser library.
license:            ISC
license-file:       LICENSE
author:             Eric Mertens
maintainer:         emertens@gmail.com
copyright:          2023 Eric Mertens
category:           Text
build-type:         Simple
tested-with:        GHC == 9.2.8, GHC == 9.4.5, GHC == 9.6.2

source-repository head
    type: git
    location: https://github.com/glguy/toml-parser
    tag: main

common extensions
    default-language:   Haskell2010
    default-extensions:
        BlockArguments
        DeriveTraversable
        GeneralizedNewtypeDeriving
        ImportQualifiedPost
        LambdaCase
        ScopedTypeVariables
        ViewPatterns

executable TomlDecoder
    import:             extensions
    hs-source-dirs:     decoder
    main-is:            Main.hs
    build-depends:
        aeson           >= 2.1 && < 2.3,
        base            ^>= 4.16 || ^>= 4.17 || ^>= 4.18,
        bytestring      ^>= 0.11,
        toml-parser     ^>= 1.1.0.0,

executable TomlEncoder
    import:             extensions
    hs-source-dirs:     encoder
    main-is:            Main.hs
    build-depends:
        aeson           >= 2.1 && < 2.3,
        base            ^>= 4.16 || ^>= 4.17 || ^>= 4.18,
        bytestring      ^>= 0.11,
        toml-parser     ^>= 1.1.0.0,

executable TomlHighlighter
    import:             extensions
    hs-source-dirs:     highlighter
    main-is:            Main.hs
    build-depends:
        base            ^>= 4.16 || ^>= 4.17 || ^>= 4.18,
        prettyprinter   ^>= 1.7.1,
        prettyprinter-ansi-terminal ^>= 1.1.3,
        toml-parser     ^>= 1.1.0.0,
