cabal-version:      3.0
name:               toml-test-drivers
version:            1.0.0.0
synopsis:           toml-parser test drivers
description:
    Test executables for the toml-parser library.
license:            ISC
license-file:       LICENSE
author:             Eric Mertens
maintainer:         emertens@gmail.com
copyright:          2023 Eric Mertens
category:           Text
build-type:         Simple
tested-with:        GHC == {8.10.7, 9.0.2, 9.2.8, 9.4.7, 9.6.3, 9.8.1}

source-repository head
    type: git
    location: https://github.com/glguy/toml-parser
    tag: main

common shared
    default-language:   Haskell2010
    default-extensions:
        BlockArguments
        DeriveTraversable
        GeneralizedNewtypeDeriving
        ImportQualifiedPost
        LambdaCase
        ScopedTypeVariables
        ViewPatterns
    build-depends:
        base            ^>= {4.14, 4.15, 4.16, 4.17, 4.18, 4.19},
        toml-parser     ^>= 1.3.1.0,

executable TomlDecoder
    import:             shared
    hs-source-dirs:     decoder
    main-is:            Main.hs
    build-depends:
        aeson           ^>= {2.1, 2.2},
        bytestring      ^>= {0.10, 0.11, 0.12},

executable TomlEncoder
    import:             shared
    hs-source-dirs:     encoder
    main-is:            Main.hs
    build-depends:
        aeson           ^>= {2.1, 2.2},
        bytestring      ^>= {0.10, 0.11, 0.12},

executable TomlHighlighter
    import:             shared
    hs-source-dirs:     highlighter
    main-is:            Main.hs
    build-depends:
        prettyprinter   ^>= 1.7.1,
        prettyprinter-ansi-terminal ^>= 1.1.3,
