name:                validator
version:             0.1.0.0
synopsis:            Validator harness for the toml-parser package
description:         Validator harness for the toml-parser package
license:             ISC
license-file:        LICENSE
author:              Eric Mertens
maintainer:          emertens@gmail.com
copyright:           2017 Eric Mertens
category:            Language
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

executable toml-parser-validator
  main-is:             Main.hs
  hs-source-dirs:      .
  build-depends:       base, toml-parser, aeson, text, time, bytestring, containers
  default-language:    Haskell2010
